--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <link rel="stylesheet" href="foodStyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Market</title>
 </head>
 
